# xfdr

./: Cargo.toml  README.md
.github/workflows/: build.yaml
resources/: log_231104_084813_KPOU.csv
src/: detection.rs  fdr.rs  garmin.rs  lib.rs  main.rs
